Fixed #9 (text size too large). Fixed #6 (quote SQL).

--- a/css/default.css
+++ b/css/default.css
@@ -19,6 +19,7 @@ body {
 	margin-top: 50px;
 	
 	/*font-family: "Lucida Grande", verdana, arial, helvetica, sans-serif;*/
+	font-family: "Times New Roman", times;
 	font-size: 76%;/* font sizing in ems, baby. if you want to change anything, just change this.*/
 }
 
